manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kr8s-app
 annotations:
  kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: kr8sswordz
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /monitor-scale/*
        backend:
          serviceName: monitor-scale
          servicePort: 3001
  - http:
      paths:
      - path: /socket.io/*
        backend:
          serviceName: monitor-scale
          servicePort: 3001
  - http:
      paths:
      - path: /puzzle/*
        backend:
          serviceName: puzzle
          servicePort: 3000
